Fix form inputs stretching mobile design

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -292,7 +292,8 @@ footer {
         }
 
         input, textarea {
-            width: 100%;
+          width: 100%;
+          box-sizing: border-box;
         }
 
     footer {
